ecmascript/parser/tests/test262-error-references/fail/44dda972051e652d.js.stderr
error: TS1094
 --> $DIR/tests/test262-parser/fail/44dda972051e652d.js:1:11
  |
1 | class A { get prop(x) {} }
  |           ^^^

